# cobot3_ws

./: .gitignore  README.md
isaacpjt/: README.md  fork.py  iw.py  iw_dock.py  iw_test.py  main.py  mm.py  moveit_mm.py  rmp_mm.py
isaacpjt/assets/tomato/: tomato_dented_01.usd  tomato_dented_01_calyx.usd  tomato_dented_02.usd  tomato_dented_02_calyx.usd  tomato_dented_03.usd  tomato_dented_03_calyx.usd  tomato_ripe_01.usd  tomato_ripe_01_calyx.usd  tomato_ripe_02.usd  (+11 more)
isaacpjt/pjt_config/: settings.py  settings_mm.py  settings_moveit.py
isaacpjt/pjt_utils/: deck_geometry.py  ripeness.py  xform.py
isaacpjt/robots/: assets.py  control.py  control_moveit.py  harvester.py  harvester_mm.py  harvester_moveit.py  iwhub.py  teleop.py  transporter.py
isaacpjt/ros/: robot_bridge.py
isaacpjt/scene/: greenhouse.py  greenhouse_task.py  ground.py  pedicel.py  physics.py  tomato_plants.py  warehouse.py
isaacpjt/spikes/: 06_grasp_spike.py  gen_map.py
isaacpjt/tests/: test_deck_geometry.py
isaacpjt/tomatest/: 03_generate_from_scene.py
isaacpjt/tools/: import_m0617_urdf.py  measure_pallet_fork_geometry.py  nav2_node_probe.py  probe_m0617.py  tcp_ik_smoke_test.py
maps/: farm.pgm  farm.yaml  farm_gen.yaml
scripts/: fix_ros_build_env.sh
src/m0609/hyeonminlee/rgb_camera_monitor/: package.xml  setup.cfg  setup.py
src/m0609/hyeonminlee/rgb_camera_monitor/rgb_camera_monitor/: color_id_node.py  rgb_watcher_node.py
src/m0609/jihoonkim/color_detector/: package.xml  setup.py
src/m0609/jihoonkim/color_detector/color_detector/: color_detector_node.py
src/m0609/minseongkim/forklift_control/: README.md  package.xml  setup.cfg  setup.py
src/m0609/minseongkim/forklift_control/forklift_control/: __init__.py  teleop_node.py
src/m0609/minseongkim/forklift_control/isaac_sim/: forklift_sim.py
src/smartfarm/: INTERFACES.md
src/smartfarm/fleet_dispatch/: package.xml  setup.cfg  setup.py
src/smartfarm/fleet_dispatch/behavior_trees/: navigate_to_pose_forward_only.xml
src/smartfarm/fleet_dispatch/config/: harvester_nav2.yaml  moveit_nav2.yaml
src/smartfarm/fleet_dispatch/fleet_dispatch/: cmd_vel_watchdog.py  fleet_dispatch_node.py  nav2_lifecycle_activator.py
src/smartfarm/fleet_dispatch/launch/: harvester_nav2.launch.py  track_b_nav2.launch.py
src/smartfarm/fleet_dispatch/maps/: farm_gen.pgm
src/smartfarm/fleet_dispatch/rviz/: harvester_nav2.rviz
src/smartfarm/harvest_moveit/: CMakeLists.txt  package.xml
src/smartfarm/harvest_moveit/config/: chomp_planning.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  servo.yaml
src/smartfarm/harvest_moveit/launch/: moveit_isaac.launch.py  nav_harvest_demo.launch.py
src/smartfarm/harvest_moveit/meshes/coaxial_scoop/: CutterQuarter3.stl  ScoopQuarter2.stl  UR10eAdapter.stl
src/smartfarm/harvest_moveit/meshes/robotiq_obj/: Defeatured_2F_85_PAD_OPEN_basestep.mtl  left_inner_finger_visuals_Defeatured_2F_85_PAD_OPEN_finger4step_01_Defeatured_2F_85_PAD_OPEN_finger4step.mtl  left_inner_finger_visuals_Defeatured_2F_85_PAD_OPEN_fingertipsstep_01_Defeatured_2F_85_PAD_OPEN_fingertipsstep.mtl  right_outer_finger_visuals_Defeatured_2F_85_PAD_OPEN_finger2step_01_Defeatured_2F_85_PAD_OPEN_finger2step.mtl  right_outer_knuckle_visuals_Defeatured_2F_85_PAD_OPEN_Finger1step_01_Defeatured_2F_85_PAD_OPEN_Finger1step.mtl
src/smartfarm/harvest_moveit/scripts/: align_to_fruit.py  creep_to_fruit.py  drive_to_row.py  grasp_debug.py  grasp_proto.py  grasp_sweep.py  harvest_key.py  nav_harvest_demo.py  snap_cam.py
src/smartfarm/harvest_moveit/srdf/: harvester_mm.srdf
src/smartfarm/harvest_vision/: MM_VISION_CONTROL.md  README.md  package.xml  setup.py
src/smartfarm/harvest_vision/config/: manipulator_target.yaml  nav_harvest_test.yaml
src/smartfarm/harvest_vision/harvest_vision/: fixed_harvest_moveit_node.py  harvest_fsm_node.py  harvest_teleop.py  manipulator_target_node.py  nav_harvest_test_node.py  target_approach_node.py  tray_manager_node.py  vision_debug_view.py  vision_node.py
src/smartfarm/harvest_vision/launch/: harvest_full.launch.py  nav_harvest_test.launch.py  smartfarm_integration.launch.py  teleop_harvest.launch.py
src/smartfarm/iwhub_control/: package.xml  setup.cfg  setup.py
src/smartfarm/iwhub_control/config/: iwhub_nav2.rviz  iwhub_odom.rviz  nav2_params.yaml  nav2_params_odom.yaml
src/smartfarm/iwhub_control/iwhub_control/: base_node.py  kinematics.py  lanes.py  mission_nav_node.py
src/smartfarm/iwhub_control/launch/: iwhub_base.launch.py  iwhub_nav2.launch.py  iwhub_odom.launch.py
src/smartfarm/iwhub_control/maps/: greenhouse.pgm  greenhouse.yaml
src/smartfarm/iwhub_control/test/: test_kinematics.py
src/smartfarm/iwhub_control/tools/: generate_greenhouse_map.py
src/smartfarm/iwhub_control/urdf/: iwhub.urdf
src/smartfarm/mm_moveit/: CMakeLists.txt  README.md  package.xml
src/smartfarm/mm_moveit/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  servo.yaml
src/smartfarm/mm_moveit/launch/: auto_nav_harvest.launch.py  fixed_harvest_moveit.launch.py  harvest_pipeline.launch.py  m0617_moveit_bringup.launch.py  moveit_isaac.launch.py  nav2_harvest_bringup.launch.py  nav_harvest_pipeline.launch.py  vision_harvest_bringup.launch.py
src/smartfarm/mm_moveit/scripts/: mm_motion_bridge.py
src/smartfarm/mm_moveit/srdf/: mm_mm.srdf
src/smartfarm/mm_moveit/urdf/: m0617_macro.xacro  mm_mm.urdf.xacro
src/smartfarm/smartfarm_common/: package.xml  setup.cfg  setup.py
src/smartfarm/smartfarm_common/smartfarm_common/: logger_node.py  warehouse_manager_node.py
src/smartfarm/smartfarm_interfaces/: CMakeLists.txt  package.xml
src/smartfarm/smartfarm_interfaces/msg/: HandoffEvent.msg  SlotAssignment.msg  TomatoDetection.msg  TomatoDetectionArray.msg  TransportRequest.msg  TrayStatus.msg
src/smartfarm/warehouse_dock/: README.md  package.xml  setup.cfg  setup.py
src/smartfarm/warehouse_dock/warehouse_dock/: fork_lift_node.py  fork_lift_return_node.py  handoff_node.py
tools/: plot_harvest_tcp_center_path.py
(+185 files in other folders)
