<?xml version="1.0"?>
<package format="3">
  <name>fleet_dispatch</name>
  <version>0.0.1</version>
  <description>트랙 B - 운반 배차: fleet_dispatch_node + nav2/AMCL 런치(정적맵 1회 생성, 로컬라이제이션은 로봇별 개별 실행)</description>
  <maintainer email="pfr0213@gmail.com">rokey</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>smartfarm_interfaces</exec_depend>
  <!-- harvester_nav2.launch.py 가 bringup_launch.py 를 include 한다.
       설치: sudo apt install ros-$ROS_DISTRO-navigation2 ros-$ROS_DISTRO-nav2-bringup -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>navigation2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
