<?xml version="1.0"?>
<package format="3">
  <name>smartfarm_common</name>
  <version>0.0.1</version>
  <description>트랙 A+B 공동 스켈레톤, 트랙 C가 로직 채움: warehouse_manager_node, logger_node</description>
  <maintainer email="pfr0213@gmail.com">rokey</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>smartfarm_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
