<?xml version="1.0"?>
<package format="3">
  <name>rgb_camera_monitor</name>
  <version>0.0.1</version>
  <description>Isaac Sim /rgb 카메라 토픽 수신 감시 및 색상 검출 노드</description>
  <maintainer email="pfr0213@gmail.com">rokey</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
