<?xml version="1.0"?>
<package format="3">
  <name>forklift_control</name>
  <version>0.1.0</version>
  <description>ROS 2 terminal teleoperation for an Isaac Sim Forklift C</description>
  <maintainer email="minseongkim@example.com">minseongkim</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
